# yg-sre

./: README.md  pve_snapshot_manager.py  pve_vm_manager_api.py
aws/: README.md  aws_ec2_snapshot_manager.sh
proxmox/: .gitignore  README.md  README_pve_snapshot_manager.md  README_pve_vm_manager_api.md  pve_snapshot_manager.py  pve_vm_manager_api.py  pyproject.toml
proxmox/pve_snapshots/: pve_snapshot_create_api.py  pve_snapshot_create_cli.py  pve_snapshot_delete_api.py  pve_snapshot_delete_cli.py  pve_snapshot_delete_interactive.py  pve_snapshot_rollback_api.py
pve_snapshots/: pve_snapshot_create_api.py  pve_snapshot_delete_api.py  pve_snapshot_delete_interactive.py  pve_snapshot_rollback_cli.py
